# kerberos-client-cpp

./: CMakeLists.txt  README  build.sh  start.sh
include/kerberos/: kerberos_config.h  kerberos_exception.h  kerberos_ticket_cache.h
src/: kerberos_config.cpp  kerberos_ticket_cache.cpp  main.cpp
tests/: CMakeLists.txt
